--- a/META.yml
+++ b/META.yml
@@ -1,25 +1,215 @@
 ---
 abstract: 'Determine if a string is a palindrome'
 author:
-  - 'Adam Lesperance <lespea@cpan.org>'
+  - 'Adam Lesperance <lespea@gmail.com>'
 build_requires:
-  ExtUtils::MakeMaker: 6.42
+  Data::Dumper: 0
+  English: 0
+  File::Find: 0
+  File::Temp: 0
+  Module::Build: 0.3601
   Test::More: 0
 configure_requires:
-  ExtUtils::MakeMaker: 6.42
-distribution_type: module
-generated_by: 'Module::Install version 0.91'
+  Module::Build: 0.3601
+dynamic_config: 0
+generated_by: 'Dist::Zilla version 4.102221, CPAN::Meta::Converter version 2.102160'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: String-Palindrome
-no_index:
-  directory:
-    - inc
-    - t
 requires:
-  Carp: 0
+  Exporter: 0
+  perl: 5.006
+  vars: 0
 resources:
-  license: http://dev.perl.org/licenses/
-version: 0.01
+  bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=String-Palindrome
+  repository: git://github.com/lespea/String-Palindrome
+version: 1.000
+x_Dist_Zilla:
+  plugins:
+    -
+      class: Dist::Zilla::Plugin::GatherDir
+      name: GatherDir
+      version: 4.102221
+    -
+      class: Dist::Zilla::Plugin::CompileTests
+      name: CompileTests
+      version: 1.101800
+    -
+      class: Dist::Zilla::Plugin::MinimumPerl
+      name: MinimumPerl
+      version: 0.02
+    -
+      class: Dist::Zilla::Plugin::CriticTests
+      name: CriticTests
+      version: 1.102280
+    -
+      class: Dist::Zilla::Plugin::HasVersionTests
+      name: HasVersionTests
+      version: 1.101420
+    -
+      class: Dist::Zilla::Plugin::MetaTests
+      name: MetaTests
+      version: 4.102221
+    -
+      class: Dist::Zilla::Plugin::MinimumVersionTests
+      name: MinimumVersionTests
+      version: 1.101421
+    -
+      class: Dist::Zilla::Plugin::PodCoverageTests
+      name: PodCoverageTests
+      version: 4.102221
+    -
+      class: Dist::Zilla::Plugin::PodSyntaxTests
+      name: PodSyntaxTests
+      version: 4.102221
+    -
+      class: Dist::Zilla::Plugin::PortabilityTests
+      name: PortabilityTests
+      version: 1.101420
+    -
+      class: Dist::Zilla::Plugin::SynopsisTests
+      name: SynopsisTests
+      version: 1.101420
+    -
+      class: Dist::Zilla::Plugin::UnusedVarsTests
+      name: UnusedVarsTests
+      version: 1.100860
+    -
+      class: Dist::Zilla::Plugin::ReadmeFromPod
+      name: ReadmeFromPod
+      version: 0.12
+    -
+      class: Dist::Zilla::Plugin::KwaliteeTests
+      name: KwaliteeTests
+      version: 1.101420
+    -
+      class: Dist::Zilla::Plugin::PruneCruft
+      name: PruneCruft
+      version: 4.102221
+    -
+      class: Dist::Zilla::Plugin::ManifestSkip
+      name: ManifestSkip
+      version: 4.102221
+    -
+      class: Dist::Zilla::Plugin::AutoPrereq
+      name: AutoPrereq
+      version: 4.102221
+    -
+      class: Dist::Zilla::Plugin::ExtraTests
+      name: ExtraTests
+      version: 4.102221
+    -
+      class: Dist::Zilla::Plugin::PkgVersion
+      name: PkgVersion
+      version: 4.102221
+    -
+      class: Dist::Zilla::Plugin::ExecDir
+      name: ExecDir
+      version: 4.102221
+    -
+      class: Dist::Zilla::Plugin::ShareDir
+      name: ShareDir
+      version: 4.102221
+    -
+      class: Dist::Zilla::Plugin::Bugtracker
+      name: Bugtracker
+      version: 1.101490
+    -
+      class: Dist::Zilla::Plugin::Repository
+      name: Repository
+      version: 0.13
+    -
+      class: Dist::Zilla::Plugin::MetaConfig
+      name: MetaConfig
+      version: 4.102221
+    -
+      class: Dist::Zilla::Plugin::License
+      name: License
+      version: 4.102221
+    -
+      class: Dist::Zilla::Plugin::ModuleBuild
+      name: ModuleBuild
+      version: 4.102221
+    -
+      class: Dist::Zilla::Plugin::InstallGuide
+      name: InstallGuide
+      version: 1.101461
+    -
+      class: Dist::Zilla::Plugin::MetaYAML
+      name: MetaYAML
+      version: 4.102221
+    -
+      class: Dist::Zilla::Plugin::MetaJSON
+      name: MetaJSON
+      version: 4.102221
+    -
+      class: Dist::Zilla::Plugin::PodWeaver
+      name: PodWeaver
+      version: 3.101640
+    -
+      class: Dist::Zilla::Plugin::Manifest
+      name: Manifest
+      version: 4.102221
+    -
+      class: Dist::Zilla::Plugin::CheckChangeLog
+      name: CheckChangeLog
+      version: 0.01
+    -
+      class: Dist::Zilla::Plugin::CheckChangesTests
+      name: CheckChangesTests
+      version: 1.100900
+    -
+      class: Dist::Zilla::Plugin::CheckChangesHasContent
+      name: CheckChangesHasContent
+      version: 0.003
+    -
+      class: Dist::Zilla::Plugin::Git::Check
+      name: Git::Check
+      version: 1.102090
+    -
+      class: Dist::Zilla::Plugin::TestRelease
+      name: TestRelease
+      version: 4.102221
+    -
+      class: Dist::Zilla::Plugin::ConfirmRelease
+      name: ConfirmRelease
+      version: 4.102221
+    -
+      class: Dist::Zilla::Plugin::UploadToCPAN
+      name: UploadToCPAN
+      version: 4.102221
+    -
+      class: Dist::Zilla::Plugin::Git::Tag
+      name: Git::Tag
+      version: 1.102090
+    -
+      class: Dist::Zilla::Plugin::Git::Commit
+      name: Commit_Changes
+      version: 1.102090
+    -
+      class: Dist::Zilla::Plugin::Git::Push
+      name: Git::Push
+      version: 1.102090
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':InstallModules'
+      version: 4.102221
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':TestFiles'
+      version: 4.102221
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':ExecFiles'
+      version: 4.102221
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':ShareFiles'
+      version: 4.102221
+  zilla:
+    class: Dist::Zilla::Dist::Builder
+    config:
+      is_trial: 0
+    version: 4.102221
