Import of LESPEA/String-Palindrome-1.02 from CPAN.
gitpan-cpan-distribution: String-Palindrome
gitpan-cpan-version:      1.02
gitpan-cpan-path:         LESPEA/String-Palindrome-1.02.tar.gz
gitpan-cpan-author:       LESPEA
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -2,7 +2,7 @@
 name    = String-Palindrome
 author  = Adam Lesperance <lespea@gmail.com>
 license = Perl_5
-version = 1.01
+version = 1.02
 
 copyright_holder = Adam Lesperance
 copyright_year   = 2010
@@ -44,7 +44,7 @@ copyright_year   = 2010
 [ShareDir]
 [Bugtracker]
 [Repository]
-[MetaConfig]
+;[MetaConfig]
 
 ; -- generate meta files
 [License]
