Import of LESPEA/String-Palindrome-1.03 from CPAN.
gitpan-cpan-distribution: String-Palindrome
gitpan-cpan-version:      1.03
gitpan-cpan-path:         LESPEA/String-Palindrome-1.03.tar.gz
gitpan-cpan-author:       LESPEA
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -2,7 +2,7 @@
 name    = String-Palindrome
 author  = Adam Lesperance <lespea@gmail.com>
 license = Perl_5
-version = 1.02
+version = 1.03
 
 copyright_holder = Adam Lesperance
 copyright_year   = 2010
@@ -18,13 +18,13 @@ copyright_year   = 2010
 [MetaTests]
 [MinimumVersionTests]
 [PodCoverageTests]
-;[PodSpellingTests]
 [PodSyntaxTests]
 [PortabilityTests]
 [SynopsisTests]
 [UnusedVarsTests]
-;[ReadmeMarkdownFromPod]
 [ReadmeFromPod]
+[NoTabsTests]
+[EOLTests]
 [KwaliteeTests]
 
 
@@ -33,18 +33,27 @@ copyright_year   = 2010
 [ManifestSkip]
 
 ; -- get prereqs
-[AutoPrereq]
+[AutoPrereqs]
+
 
 ; -- munge files
+[Homepage]
+[AutoMetaResources]
+bugtracker.rt = 1
+bugtracker.github = user:lespea
+repository.github = user:lespea
+
+
 [ExtraTests]
 [PkgVersion]
+[Authority]
+authority = cpan:LESPEA
+do_metadata = 1
 
 ; -- dynamic meta-information
 [ExecDir]
-[ShareDir]
 [Bugtracker]
-[Repository]
-;[MetaConfig]
+[MetaConfig]
 
 ; -- generate meta files
 [License]
@@ -53,6 +62,8 @@ copyright_year   = 2010
 [MetaYAML]
 [MetaJSON]
 [PodWeaver]
+
+
 [Manifest] ; should come last
 
 ; -- release
