--- a/dist.ini
+++ b/dist.ini
@@ -2,85 +2,43 @@
 name    = String-Palindrome
 author  = Adam Lesperance <lespea@gmail.com>
 license = Perl_5
-version = 1.03
+version = 2.000000
 
 copyright_holder = Adam Lesperance
 copyright_year   = 2010
 
 
 
-; -- fetch & generate files
-[GatherDir]
-[CompileTests]
-[MinimumPerl]
-[CriticTests]
-[HasVersionTests]
-[MetaTests]
-[MinimumVersionTests]
-[PodCoverageTests]
-[PodSyntaxTests]
-[PortabilityTests]
-[SynopsisTests]
-[UnusedVarsTests]
-[ReadmeFromPod]
-[NoTabsTests]
-[EOLTests]
-[KwaliteeTests]
+[@Author::LESPEA]
+;release           = real
+;
+;archive           = 1
+;archive_directory = releases
+;
+;copy_file         = file1 file2
+;move_file         = file3 file4
+;
+;tidy_perl         = 0
+;
+;add_meta          = 1
+;
+;compile_synopsis  = 1
 
 
-; -- remove some files
-[PruneCruft]
-[ManifestSkip]
-
-; -- get prereqs
-[AutoPrereqs]
+[Signature]
+sign = always
 
 
-; -- munge files
-[Homepage]
-[AutoMetaResources]
-bugtracker.rt = 1
-bugtracker.github = user:lespea
-repository.github = user:lespea
-
-
-[ExtraTests]
-[PkgVersion]
-[Authority]
-authority = cpan:LESPEA
-do_metadata = 1
-
-; -- dynamic meta-information
-[ExecDir]
-[Bugtracker]
-[MetaConfig]
-
-; -- generate meta files
-[License]
-[ModuleBuild]
-[InstallGuide]
-[MetaYAML]
-[MetaJSON]
-[PodWeaver]
-
-
-[Manifest] ; should come last
-
-; -- release
-[CheckChangeLog]
-[CheckChangesTests]
-[CheckChangesHasContent]
 [Git::Check]
-[TestRelease]
-[ConfirmRelease]
+allow_dirty = README.pod
 
-; releaser
-[UploadToCPAN]
+;  Commit all the local changes
+[Git::Commit / Commit_Changes]
 
+;  Tag the release
 [Git::Tag]
 tag_format = release-%v
 
-[Git::Commit / Commit_Changes]
-
+;  Finally push the changes to git
 [Git::Push]
 push_to = origin
