--- a/META.yml
+++ b/META.yml
@@ -3,19 +3,16 @@ abstract: 'Determine if a string is a palindrome'
 author:
   - 'Adam Lesperance <lespea@gmail.com>'
 build_requires:
-  Carp: 0
   Data::Dumper: 0
   English: 0
   File::Find: 0
   File::Temp: 0
   Module::Build: 0.3601
-  Scalar::Util: 0
-  Test::More: 0.94
-  perl: 5.004
+  Test::More: 0.88
 configure_requires:
   Module::Build: 0.3601
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.200004, CPAN::Meta::Converter version 2.110440'
+generated_by: 'Dist::Zilla version 4.200007, CPAN::Meta::Converter version 2.110930'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -30,6 +27,8 @@ no_index:
     - share
     - example
     - examples
+  file:
+    - README.html
 requires:
   Exporter: 0
   perl: 5.008
@@ -39,25 +38,21 @@ resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=String-Palindrome
   homepage: http://search.cpan.org/dist/String-Palindrome
   repository: git://github.com/lespea/string-palindrome.git
-version: 2.000000
+version: 2.000001
 x_Dist_Zilla:
   plugins:
     -
       class: Dist::Zilla::Plugin::GatherDir
       name: '@Author::LESPEA/GatherDir'
-      version: 4.200004
+      version: 4.200007
     -
       class: Dist::Zilla::Plugin::CopyFilesFromBuild
       name: '@Author::LESPEA/CopyFilesFromBuild'
       version: 0.103510
     -
-      class: Dist::Zilla::Plugin::PerlTidy
-      name: '@Author::LESPEA/PerlTidy'
-      version: 0.09
-    -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: '@Author::LESPEA/UploadToCPAN'
-      version: 4.200004
+      version: 4.200007
     -
       class: Dist::Zilla::Plugin::ArchiveRelease
       name: '@Author::LESPEA/ArchiveRelease'
@@ -69,7 +64,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::Authority
       name: '@Author::LESPEA/Authority'
-      version: 1.003
+      version: 1.005
     -
       class: Dist::Zilla::Plugin::SynopsisTests
       name: '@Author::LESPEA/SynopsisTests'
@@ -77,7 +72,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::PkgVersion
       name: '@Author::LESPEA/PkgVersion'
-      version: 4.200004
+      version: 4.200007
     -
       class: Dist::Zilla::Plugin::PodWeaver
       name: '@Author::LESPEA/PodWeaver'
@@ -85,27 +80,23 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::NextRelease
       name: '@Author::LESPEA/NextRelease'
-      version: 4.200004
+      version: 4.200007
     -
       class: Dist::Zilla::Plugin::MinimumPerl
       name: '@Author::LESPEA/MinimumPerl'
-      version: 0.02
+      version: 1.003
     -
       class: Dist::Zilla::Plugin::AutoPrereqs
       name: '@Author::LESPEA/AutoPrereqs'
-      version: 4.200004
+      version: 4.200007
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: '@Author::LESPEA/MetaConfig'
-      version: 4.200004
-    -
-      class: Dist::Zilla::Plugin::CheckChangesTests
-      name: '@Author::LESPEA/CheckChangesTests'
-      version: 1.100900
+      version: 4.200007
     -
       class: Dist::Zilla::Plugin::CompileTests
       name: '@Author::LESPEA/CompileTests'
-      version: 1.103030
+      version: 1.110930
     -
       class: Dist::Zilla::Plugin::ConsistentVersionTest
       name: '@Author::LESPEA/ConsistentVersionTest'
@@ -113,7 +104,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::CriticTests
       name: '@Author::LESPEA/CriticTests'
-      version: 1.102280
+      version: 1.111450
     -
       class: Dist::Zilla::Plugin::DistManifestTests
       name: '@Author::LESPEA/DistManifestTests'
@@ -133,7 +124,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::MetaTests
       name: '@Author::LESPEA/MetaTests'
-      version: 4.200004
+      version: 4.200007
     -
       class: Dist::Zilla::Plugin::MinimumVersionTests
       name: '@Author::LESPEA/MinimumVersionTests'
@@ -145,11 +136,11 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::PodCoverageTests
       name: '@Author::LESPEA/PodCoverageTests'
-      version: 4.200004
+      version: 4.200007
     -
       class: Dist::Zilla::Plugin::PodSyntaxTests
       name: '@Author::LESPEA/PodSyntaxTests'
-      version: 4.200004
+      version: 4.200007
     -
       class: Dist::Zilla::Plugin::PortabilityTests
       name: '@Author::LESPEA/PortabilityTests'
@@ -159,41 +150,45 @@ x_Dist_Zilla:
       name: '@Author::LESPEA/UnusedVarsTests'
       version: 1.100860
     -
-      class: Dist::Zilla::Plugin::CPANChangesTests
-      name: '@Author::LESPEA/CPANChangesTests'
-      version: 1.001
+      class: Dist::Zilla::Plugin::Test::CPAN::Changes
+      name: '@Author::LESPEA/Test::CPAN::Changes'
+      version: 0.005
+    -
+      class: Dist::Zilla::Plugin::SpellingCommonMistakesTests
+      name: '@Author::LESPEA/SpellingCommonMistakesTests'
+      version: 1.001000
     -
       class: Dist::Zilla::Plugin::ExtraTests
       name: '@Author::LESPEA/ExtraTests'
-      version: 4.200004
+      version: 4.200007
     -
       class: Dist::Zilla::Plugin::PruneCruft
       name: '@Author::LESPEA/PruneCruft'
-      version: 4.200004
+      version: 4.200007
     -
       class: Dist::Zilla::Plugin::ManifestSkip
       name: '@Author::LESPEA/ManifestSkip'
-      version: 4.200004
+      version: 4.200007
     -
       class: Dist::Zilla::Plugin::ExecDir
       name: '@Author::LESPEA/ExecDir'
-      version: 4.200004
+      version: 4.200007
     -
       class: Dist::Zilla::Plugin::ShareDir
       name: '@Author::LESPEA/ShareDir'
-      version: 4.200004
+      version: 4.200007
     -
-      class: Dist::Zilla::Plugin::ReportVersions
-      name: '@Author::LESPEA/ReportVersions'
-      version: 1.102460
+      class: Dist::Zilla::Plugin::ReportVersions::Tiny
+      name: '@Author::LESPEA/ReportVersions::Tiny'
+      version: 1.03
     -
       class: Dist::Zilla::Plugin::ModuleBuild
       name: '@Author::LESPEA/ModuleBuild'
-      version: 4.200004
+      version: 4.200007
     -
       class: Dist::Zilla::Plugin::MakeMaker
       name: '@Author::LESPEA/MakeMaker'
-      version: 4.200004
+      version: 4.200007
     -
       class: Dist::Zilla::Plugin::DualBuilders
       name: '@Author::LESPEA/DualBuilders'
@@ -201,11 +196,11 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::MetaNoIndex
       name: '@Author::LESPEA/MetaNoIndex'
-      version: 4.200004
+      version: 4.200007
     -
       class: Dist::Zilla::Plugin::License
       name: '@Author::LESPEA/License'
-      version: 4.200004
+      version: 4.200007
     -
       class: Dist::Zilla::Plugin::InstallGuide
       name: '@Author::LESPEA/InstallGuide'
@@ -213,11 +208,11 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::MetaJSON
       name: '@Author::LESPEA/MetaJSON'
-      version: 4.200004
+      version: 4.200007
     -
       class: Dist::Zilla::Plugin::MetaYAML
       name: '@Author::LESPEA/MetaYAML'
-      version: 4.200004
+      version: 4.200007
     -
       class: Dist::Zilla::Plugin::ReadmeAnyFromPod
       name: '@Author::LESPEA/html.build'
@@ -233,15 +228,15 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::Manifest
       name: '@Author::LESPEA/Manifest'
-      version: 4.200004
+      version: 4.200007
     -
       class: Dist::Zilla::Plugin::TestRelease
       name: '@Author::LESPEA/TestRelease'
-      version: 4.200004
+      version: 4.200007
     -
       class: Dist::Zilla::Plugin::ConfirmRelease
       name: '@Author::LESPEA/ConfirmRelease'
-      version: 4.200004
+      version: 4.200007
     -
       class: Dist::Zilla::Plugin::Signature
       name: Signature
@@ -249,38 +244,46 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::Git::Check
       name: Git::Check
-      version: 1.110480
+      version: 1.111590
     -
       class: Dist::Zilla::Plugin::Git::Commit
       name: Commit_Changes
-      version: 1.110480
+      version: 1.111590
     -
       class: Dist::Zilla::Plugin::Git::Tag
       name: Git::Tag
-      version: 1.110480
+      version: 1.111590
     -
       class: Dist::Zilla::Plugin::Git::Push
       name: Git::Push
-      version: 1.110480
+      version: 1.111590
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
-      version: 4.200004
+      version: 4.200007
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':IncModules'
+      version: 4.200007
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':TestFiles'
-      version: 4.200004
+      version: 4.200007
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ExecFiles'
-      version: 4.200004
+      version: 4.200007
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ShareFiles'
-      version: 4.200004
+      version: 4.200007
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':MainModule'
+      version: 4.200007
   zilla:
     class: Dist::Zilla::Dist::Builder
     config:
       is_trial: 0
-    version: 4.200004
+    version: 4.200007
 x_authority: cpan:LESPEA
